# fastapi-sqla-shadcn

./: README.md
api/: .gitignore  Makefile  api.py  database.py  pyproject.toml  settings.py
api/models/: examples.py
api/routes/: examples.py
web/: package.json
web/src/: App.tsx
